# paste-spring

./: .gitignore  README.md  build.gradle.kts  docker-compose.yml  settings.gradle.kts  spec.yml
.devcontainer/: devcontainer.json
.github/workflows/: job-build-java.yml  job-deploy-docs.yml  job-test-medium-java.yml  job-test-small-java.yml  on-pullrequest-java.yml  on-push-docs.yml
api-tests/: .gitignore  README.md  pyproject.toml
api-tests/lib/: api_config.py
api-tests/tests/: test_create.py  test_read.py
src/integration-test/java/com/example/paste/create/: CreateServiceIntegrationTest.java
src/integration-test/java/com/example/paste/read/: ReadServiceIntegrationTest.java
src/integration-test/resources/: application.yml
src/main/java/com/example/paste/: PasteApplication.java
src/main/java/com/example/paste/create/: CreateConfig.java  CreateController.java  CreateResult.java  CreateService.java  CreateSuccess.java
src/main/java/com/example/paste/create/data/: PasteCreated.java  PasteCreatedRepository.java
src/main/java/com/example/paste/create/exceptions/: InvalidInputException.java  SystemErrorException.java
src/main/java/com/example/paste/create/models/: PasteContent.java  PasteUrls.java
src/main/java/com/example/paste/read/: ReadController.java  ReadHtmlResult.java  ReadJsonResult.java  ReadRawResult.java  ReadService.java
src/main/java/com/example/paste/read/data/: HtmlTemplateLoader.java
src/main/resources/: application.yml
src/main/resources/templates/: paste.html
src/test/java/com/example/paste/: PasteApplicationTests.java
(+10 files in other folders)
